--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,3 +3,11 @@
     margin: 0;
     box-sizing: border-box;
 }
+
+.valid{
+    color: #08A508 !important
+}
+
+.invalid{
+    color: #FA4D4D !important
+}
