--- a/src/app/new-task/new-task.component.html
+++ b/src/app/new-task/new-task.component.html
@@ -7,7 +7,8 @@
        <!-- name fileds -->
         <div class="title-div">
 <app-input [label]="'სახელი*'" [value]="titleValue()" (valueEmit)="handleNameChange($event)" [minimumRequirement]="'მინიმუმ 2 სიმბოლო'" 
-[maximumRequirement]="'მაქსიმუმ 255 სიმბოლო'" [minimumLengthIsValid]="minimumLengthValid()"  [maxiumLengthIsValid]="maximumLengthValid()">
+[maximumRequirement]="'მაქსიმუმ 255 სიმბოლო'" [minimumLengthIsValid]="minimumLengthValid()"  [maxiumLengthIsValid]="maximumLengthValid()"
+[formSubmitted]="formSubmitted()">
 </app-input>
         </div>
 
@@ -27,6 +28,17 @@
             }">მაქსიმუმ 255 სიმბოლო</span>
             </div>
            </div>
+
+           <div class="status-priority-container">
+<div class="priority">
+    <app-dropdown [data]="priorities()" [initialValue]="initialPriority()" [classifier]="'priorities'" (getchosenValue)="handleDropDownChange($event)"></app-dropdown>
+</div>
+<div class="status">
+    <app-dropdown [data]="statuses()" [initialValue]="initialStatus()" [classifier]="'statuses'" (getchosenValue)="handleDropDownChange($event)"></app-dropdown>
+</div>
+           </div>
+
+
        </div>
 
        <!-- meore div -->
