--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,5 +9,9 @@
 }
 
 .invalid{
-    color: #FA4D4D !important
-}
+    color: #FA4D4D !important}
+
+.invalid-border{
+    border: 1px solid #FA4D4D !important ;
+}    
+
