--- a/src/app/core/shared-components/input/input.component.html
+++ b/src/app/core/shared-components/input/input.component.html
@@ -1,5 +1,8 @@
 <label [for]="{label}" >{{label}}</label>
-<input type="text" name={{label}} [value]="value()" (input)="handleChange($event)">
+<input type="text" name={{label}} [value]="value()" (input)="handleChange($event)" [ngClass]="{
+    'invalid-border':value().length>0 && !minimumLengthIsValid || formSubmitted && !minimumLengthIsValid
+    || value().length>0 && maxiumLengthIsValid
+}" >
 <div class="span-container">
     <span [ngClass]="{
     'valid': value().length>0 && minimumLengthIsValid,
