--- a/src/app/new-employee/new-employee.component.scss
+++ b/src/app/new-employee/new-employee.component.scss
@@ -1,5 +1,6 @@
-/* Overlay */
+
 .overlay {
+  z-index: 2;
     position: fixed;
     top: 0;
     left: 0;
@@ -10,7 +11,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1;
   
   
   /* Modal */
@@ -20,11 +20,9 @@
     max-width: 90%; //needs to be changed
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    overflow: hidden;
     display: flex;
     flex-direction: column;
     padding: 15px;
-    gap: 15px;
     .img-container{
         display: flex;
 justify-content: end;
@@ -35,7 +33,14 @@ justify-content: end;
   }
     }
     form{
-
+display: flex;
+flex-direction: column;
+gap:20px;
+h2{
+  font-size: 16px;
+  text-align: center;
+  margin-top: 10px;
+}
         //btn container
         .modal-footer{
             display: flex;
@@ -59,8 +64,82 @@ color: white
                 background-color: white;
             }
         }
+         .img-container {
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          // background-color: gray;
+        
+          .upload-container {
+            padding: 10px ;
+            width: 100%;
+            background-color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px dashed #CED4DA;
+            cursor: pointer;
+            border-radius: 10px;
+            overflow: hidden;
+        
+            input[type="file"] {
+              display: none;
+            }
+        
+          
+  
+            .image-preview {
+              position: relative;
+              width: 58px;
+              height: 58px;
+              border-radius: 50%;
+          
+              img {
+                  width: 100%;
+                  height: 100%;
+                  object-fit: cover;
+                  border-radius: 10px;
+                  border-radius: 50%;
+              }
+          
+              .fa-trash {
+                  position: absolute;
+                  bottom:-4px;
+                  right: 0;
+                 background-color: white;
+                  color:#8a8f93;
+                  border-radius: 50%;
+                 font-size: 10px;
+                  padding: 4px ;
+                  border: 1px solid #8a8f93 ;
+                  cursor: pointer;
+              }
+          }
+        
+            .upload-text {
+              font-size: 14px;
+              color: #777;
+              display: flex;
+              flex-direction: column;
+              text-align: center;
+              .fa-image{
+  font-size: 18px;
+              }
+              p{
+                color: #343A40;
+                font-size: 10px;
+                font-weight:400;
+
+                margin-top: 5px;
+              }
+            }
+          }
+        }
     }
    
+  }
+  .invalid-dashed-boarder{
+    border:1px dashed red !important;
   }
 }
   
