--- a/src/app/new-task/new-task.component.html
+++ b/src/app/new-task/new-task.component.html
@@ -32,11 +32,11 @@
            <div class="status-priority-container">
 <div class="priority">
     <app-dropdown [data]="priorities()" [chosenValue]="chosenPriority()" [classifier]="'priority'" (getchosenValue)="handleDropDownChange($event)"
-    [title]="'პრიორიტეტი*'"></app-dropdown>
+    [title]="'პრიორიტეტი*'" ></app-dropdown>
 </div>
 <div class="status">
     <app-dropdown [data]="statuses()" [chosenValue]="chosenstatus()" [classifier]="'statuses'" (getchosenValue)="handleDropDownChange($event)"
-    [title]="'სტატუსი*'"></app-dropdown>
+    [title]="'სტატუსი*'" ></app-dropdown>
 </div>
            </div>
 
@@ -47,8 +47,8 @@
 <div class="second-sub-container">
    <div class="department-employee-container">
     <div class="department-container">
-        <app-dropdown [data]="departments()" [chosenValue]="chosenDepartment()" [classifier]="'department'" (getchosenValue)="handleDropDownChange($event)"
-        [title]="'დეპარტამენტი*'"></app-dropdown>
+        <app-dropdown [data]="apiService.departments()" [chosenValue]="chosenDepartment()" [classifier]="'department'" (getchosenValue)="handleDropDownChange($event)"
+        [title]="'დეპარტამენტი*'" [formSubmitted]="formSubmitted"></app-dropdown>
     </div>
     @if(chosenDepartment()){
         <div class="employees-container">
