--- a/src/app/core/shared-components/dropdown/dropdown.component.scss
+++ b/src/app/core/shared-components/dropdown/dropdown.component.scss
@@ -17,6 +17,8 @@
         border: 1px solid #DEE2E6;
         background-color: white;
         border-radius: 4px;
+        width:100%;
+        // height: px !important;
         .img-container{
             display: flex;
         flex-direction: row;
@@ -42,6 +44,7 @@
         background-color: white;
         list-style: none;
         border-radius: 4px;
+       
         li{
             display: flex;
             flex-direction: row;
