added arrow toggle functionality in filtering

--- a/src/app/core/shared-components/li/li.component.html
+++ b/src/app/core/shared-components/li/li.component.html
@@ -1,1 +1,1 @@
-<p >{{title}} <i class="fa-solid"></i></p>
+<p (click)="toggle()">{{title}} <i class="fa-solid" [ngClass]="up()?'fa-angle-up':'fa-angle-down'"></i></p>
