--- a/src/app/tasks/tasks.component.html
+++ b/src/app/tasks/tasks.component.html
@@ -1,9 +1,9 @@
 <h1>დავალებების გვერდი</h1>
 <div class="filters">
     <ul>
-        <li (click)="toggle()" appLi [title]="'დეპარტამენტი'"></li>
-        <li (click)="toggle()"  appLi [title]="'პრიორიტეტი'"></li>
-        <li (click)="toggle()" appLi [title]="'თანამშრომელი'"></li>
+        <li  appLi [title]="'დეპარტამენტი'" [val]="'departments'" ></li>
+        <li   appLi [title]="'პრიორიტეტი'" [val]="'priorities'" ></li>
+        <li  appLi [title]="'თანამშრომელი'" [val]="'employees'" ></li>
     </ul>
 
 </div>
