wip:refining add-task component and working on tasks component

--- a/src/app/core/shared-components/dropdown/dropdown.component.html
+++ b/src/app/core/shared-components/dropdown/dropdown.component.html
@@ -12,7 +12,10 @@
 </div>
 @if(openList()){
 <ul >
-    @if(classifier==='employee'){<li (click)="SharedStates.openEmployeeModal.set(true)">add employee</li>}
+    @if(classifier==='employee'){<li class="add-empl" (click)="SharedStates.openEmployeeModal.set(true)">
+        <img src="images/Frame 1000006008.svg" alt="symbol">
+        დაამატე თანამშრომელი
+    </li>}
     @for(item of data; track item.id){
         <li (click)="setValue(item)">
             @if(item?.icon){<img [alt]="item.name" [src]="item?.icon">}
