--- a/src/app/tasks/tasks.component.scss
+++ b/src/app/tasks/tasks.component.scss
@@ -25,7 +25,32 @@
                 flex-direction: row;
                 justify-content: space-between;
                 gap:10px;
+                list-style: none;
             }
+        }
+        .main-container{
+            .collapsible-section{
+                .header {
+                    background-color: #007bff;
+                    color: white;
+                    padding: 10px;
+                    cursor: pointer;
+                    user-select: none;
+                    border-radius: 5px 5px 0 0;
+                  }
+                  .content {
+                    max-height: 0;
+                    overflow: hidden;
+                    transition: max-height 0.3s ease;
+                    background-color: #f1f1f1;
+                    padding: 0 10px;
+                    border-radius: 0 0 5px 5px;
+                  }
+            }
+         
+              
+            
+              
         }
 }
 
