--- a/src/app/tasks/tasks.component.scss
+++ b/src/app/tasks/tasks.component.scss
@@ -29,24 +29,10 @@
             }
         }
         .main-container{
-            .collapsible-section{
-                .header {
-                    background-color: #007bff;
-                    color: white;
-                    padding: 10px;
-                    cursor: pointer;
-                    user-select: none;
-                    border-radius: 5px 5px 0 0;
-                  }
-                  .content {
-                    max-height: 0;
-                    overflow: hidden;
-                    transition: max-height 0.3s ease;
-                    background-color: #f1f1f1;
-                    padding: 0 10px;
-                    border-radius: 0 0 5px 5px;
-                  }
-            }
+            width:100%;
+        display: flex;
+        flex-direction: column;
+        gap:10px
          
               
             
