--- a/src/app/tasks/task-item/task-item.component.scss
+++ b/src/app/tasks/task-item/task-item.component.scss
@@ -41,7 +41,7 @@ border-radius: 15px;
 p{font-size: 12px;
     font-weight: 400;
     text-align: center;
-color: white}
+color: rgb(13, 13, 13)}
     }
 }
 .date{
