--- a/src/app/new-task/new-task.component.html
+++ b/src/app/new-task/new-task.component.html
@@ -56,7 +56,12 @@
     }
    
    </div>
-    <div class="deadline-container"></div>
+    <div class="deadline-container" >
+        <!-- <p>დედლაინი</p> -->
+         
+<label for="date">დედლაინი</label>
+      
+    </div>
 </div>
       
 
