--- a/src/app/new-employee/new-employee.component.scss
+++ b/src/app/new-employee/new-employee.component.scss
@@ -93,13 +93,22 @@ color: white
               width: 58px;
               height: 58px;
               border-radius: 50%;
+              // background-size: cover; 
+              // background-repeat: no-repeat;
+              // background-position:  center;
+              border: 1px solid black;
+  
           
               img {
-                  width: 100%;
-                  height: 100%;
+                  // width: 100%;
+                  // height: 100%;
+                  width: 58px;
+                  height: 58px;
                   object-fit: cover;
                   border-radius: 10px;
                   border-radius: 50%;
+                  object-fit: cover;
+  object-position: top center
               }
           
               .fa-trash {
