--- a/src/app/new-task/new-task.component.scss
+++ b/src/app/new-task/new-task.component.scss
@@ -67,7 +67,21 @@
                 width: 50%;
                
             }
+            .deadline-container{
+                position: relative;
+                border: 1px solid black;
+                width: 50%;
+                display: flex;
+                flex-direction: column;
+                gap:2px;
+                p{
+font-weight: bold;
+                }
+               
+            }
            
         }
     }
 }
+
+
