--- a/src/app/task/task.component.scss
+++ b/src/app/task/task.component.scss
@@ -36,19 +36,18 @@
             align-items: center;
             display: flex;
         flex-direction: row;
-        // gap:10px;
         justify-content: space-between;
         };
         .task-status{
-            // border: 1px solid black;
+            align-items: end;
             .status{
-                // border: 1px solid red;
                 width: 50%;
+                height: 100%;
                 .chosen-status{
                     display: flex;
                     flex-direction: row;
                     justify-content: space-between;
-                    padding: 5px;
+                    padding: 10px;
 border: 1px solid #CED4DA;
 border-radius: 5px;
                     p{
@@ -79,24 +78,31 @@ border-radius: 5px;
             }
         }
         .task-employee{
-            border: 1px solid black;
-            // background-color: yellow;
             .employee-details{
                 display: flex;
                 flex-direction: column;
                 gap:3px;
-                p{
+                justify-content: flex-start;
+// border: 1px solid blue;
+width: 50%;
+                .department-name{
                     font-size: 8px;
+                    margin-left: 21px;
                   
                 }
                 .employee-img-container{
                     display: flex;
                     flex-direction: row;
                     gap:5px;
-
+// justify-content: flex-start;
+// border: 1px solid blue;
+p{background-color: yellow;}
                     img{width:16px;
                     height: 16px;
                 border-radius: 50px;
+                object-fit: cover;
+                object-position: top center;
+                // position: absolute;
                }
                 }
                 .empoyee-name{
@@ -106,6 +112,37 @@ border-radius: 5px;
                 }
             }
             
+        }
+    }
+    .comments-div{
+        width: 100%;
+        background-color: #DDD2FF;
+        display: flex;
+        flex-direction: column;
+        gap:30px;
+        padding: 25px;
+        .all-comments{
+            display: flex;
+            flex-direction: column;
+            gap:15px;
+            h4{
+                font-weight: bold;
+                font-size: 13px;
+                margin-right: 4px;
+span{
+    padding: 1px 6px;
+    background-color: #8338EC;
+    color: white;
+    border-radius: 50%;
+}
+            }
+            .comment-list{
+list-style: none;
+li{
+    margin-top: 10px;
+}
+            }
+           
         }
     }
 }
